--- a/content/draft/HelloWeb/03/index.html
+++ b/content/draft/HelloWeb/03/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./style.css" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
-＜ｐ＞Hello World＜／ｐ＞
+  <h1>Hello World</h1>
+  <p>こんにちは、いい天気ですね。</p>
+  <p>今日はご飯でもおごりますよ。</p>
 </body>
 </html>
