--- a/content/draft/HelloWeb/06/index.html
+++ b/content/draft/HelloWeb/06/index.html
@@ -7,7 +7,10 @@
   <title>HTMLについての解説</title>
 </head>
 <body>
-<p>こんにちは、私の名前は明です。<br>今月からHTMLの勉強を始めました。まだまだ未熟者ですが、よろしくお願いします。</p>
-<p>さて、今回は私が今までHTMLを勉強してきた内容をまとめたいと思います。</p>
+<p> 〒530-0001<br>
+    大阪府大阪市北区<br>
+    梅田99丁目99-99<br>
+    〇〇××ビル 8階
+</p>
 </body>
 </html>
