--- a/content/draft/HelloWeb/12/index.html
+++ b/content/draft/HelloWeb/12/index.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./style.css" rel="stylesheet">
-  <title>CSSの継承</title>
+  <link href="style.css" rel="stylesheet">
+  <title>colorプロパティ</title>
 </head>
 <body>
-  <div class="wrapper">
-    <h1>h1タイトル</h1>
-  </div> 
+  <h1>h1</h1>
 </body>
 </html>
